fix(formatter-text): improving accessibility by increase link contrasts

--- a/web/main/colors.css
+++ b/web/main/colors.css
@@ -81,8 +81,8 @@
     --flat-active-shadow: inset 0 1px 2px oklch(0% 0 0 / 80%);
     --field-color: color-mix(in oklch, var(--neutral-900), var(--neutral-800));
     --field-shadow: inset 0 1px 2px oklch(0% 0 0 / 60%);
-    --link-color: var(--blue-300);
-    --link-color-visited: var(--violet-300);
+    --link-color: var(--blue-400);
+    --link-color-visited: var(--violet-400);
     --inline-code-color: oklch(from var(--zinc-800) l c h / 60%);
   }
 }
